# vma-socket

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  run.sh  vma_options.json
.cargo/: config.toml
benches/std-async/: Cargo.toml
benches/std-async/src/: main.rs
example/: tcp_test.rs  udp_test.rs
examples/: .#socket_polling_bench.rs  socket_polling_bench.rs  tcp_test.rs  udp_test.rs
src/: common.rs  lib.rs  main.rs  tcp.rs  udp.rs
src/c/: tcp_socket.c  tcp_socket.h  tcp_test  tcp_test.c  udp_socket.c  udp_socket.h  udp_test  udp_test.c  vma_common.c  vma_common.h
