[package]
name = "vma-socket"
version = "0.1.5"
edition = "2021"
authors = ["Junbeom Lee <junbeoml22@gmail.com>"]
description = "High-level Rust bindings for Mellanox/NVIDIA VMA (Messaging Accelerator) sockets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JunbeomL22/vma-socket"
documentation = "https://docs.rs/vma-socket"
keywords = ["network", "rdma", "vma", "low-latency", "mellanox"]
categories = ["network-programming", "api-bindings"]

[dependencies]
libc = "0.2"
ctrlc = "3.2"
serde = { version = "1.0", features = ["derive"] }
flashlog = "0.3.1"
core_affinity = "0.8.3" 

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
cc = "1.2" 

[lib]
name = "vma_socket"
path = "src/lib.rs"

[workspace]
members = [
    "benches/std-async",
]
